Fix scrollbar issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2681,11 +2681,15 @@ body.hider-frameless:not(.hider-ribbon):not(.is-fullscreen) .side-dock-actions {
   width: 11px;
   background-color: transparent; }
 
+::-webkit-scrollbar-corner {
+  background-color: transparent; }
+
 ::-webkit-scrollbar-track {
   background-color: transparent; }
 
 ::-webkit-scrollbar-thumb {
   background-clip: padding-box;
+  border-radius: 20px;
   border: 3px solid transparent;
   background-color: var(--background-modifier-border);
   border-width: 3px 3px 3px 3px;
@@ -6596,8 +6600,8 @@ body:not(.title-align-center):not(.title-align-left):not(.plugin-sliding-panes-r
   margin: 0 0 0 calc(50% - var(--max-width)/2) !important;
   padding-left: var(--folding-offset); }
 
-.markdown-source-view.mod-cm6 .cm-content > [contenteditable=false] {
-  overflow: scroll; }
+.markdown-source-view.mod-cm6 .cm-content > .cm-embed-block[contenteditable=false] {
+  overflow-x: scroll; }
 
 /* Folding offset */
 .markdown-preview-view.is-readable-line-width .markdown-preview-sizer > div,
